--- a/index.html
+++ b/index.html
@@ -36,9 +36,27 @@
 </head>
 
 <body>
-    <header>
+    <!-- Header -->
+    <header class="header">
         <div class="container">
-
+            <div class="header__inner">
+                <!-- Logo -->
+                <img src="./assets/img/Logo.svg" alt="Lucy" class="logo" />
+                <!-- Navbar -->
+                <nav class="navbar">
+                    <ul class="navbar__list">
+                        <li class="navbar__item"><a href="#!" class="navbar__link">Home</a></li>
+                        <li class="navbar__item"><a href="#!" class="navbar__link">About</a></li>
+                        <li class="navbar__item"><a href="#!" class="navbar__link">Services & Rates</a></li>
+                        <li class="navbar__item"><a href="#!" class="navbar__link">Reviews</a></li>
+                        <li class="navbar__item"><a href="#!" class="navbar__link">Contacts us</a></li>
+                    </ul>
+                </nav>
+                <!-- Header Action -->
+                 <div class="header-action">
+                    <a href="#!" class="btn header-action__link">Sign in</a>
+                 </div>
+            </div>
         </div>
     </header>
 </body>
