--- a/index.html
+++ b/index.html
@@ -59,6 +59,27 @@
             </div>
         </div>
     </header>
+
+    <!-- Hero -->
+     <section class="hero">
+        <div class="container">
+            <div class="hero__inner">
+                <!-- Hero Media -->
+                <div class="hero__media">
+                    <div class="hero__img-wrap">
+                        <img src="./assets/img/pet-01.png" alt="" class="hero__img">
+                        <!-- Decorators -->
+                         <img src="./assets/img/decor-01.svg" alt="" class="hero__decor hero__decor-left">
+                         <img src="./assets/img/decor-02.svg" alt="" class="hero__decor hero__decor-right">
+                    </div>
+                    <div class="hero__img-wrap hero__img-wrap-small">
+                        <img src="./assets/img/pet-02.png" alt="" class="hero__img hero__img-small">
+                    </div>
+                </div>
+                <section class="hero__content"></section>
+            </div>
+        </div>
+     </section>
 </body>
 
 </html>
