--- a/index.html
+++ b/index.html
@@ -73,7 +73,28 @@
                          <img src="./assets/img/decor-02.svg" alt="" class="hero__decor hero__decor-right">
                     </div>
                     <div class="hero__img-wrap hero__img-wrap-small">
-                        <img src="./assets/img/pet-02.png" alt="" class="hero__img hero__img-small">
+                        <img src="./assets/img/pet-02.png" alt="" class="hero__img">
+                    </div>
+                    <div class="hero__list">
+                        <!-- hero list item 1 -->
+                        <section class="hero-list-item">
+                            <img src="./assets/img/pet-03.png" alt="" class="hero-list-item__thumb">
+                            <div class="hero-list-item__info">
+                                <p class="hero-list-item__title">Pet Health</p>
+                                <div class="hero-list-item__skeletion"></div>
+                                <div class="hero-list-item__skeletion" style="--width:39px"></div>
+                            </div>
+                        </section>
+                        <span class="hero-list-item__separate"></span>
+                         <!-- hero list item 2 -->
+                        <section class="hero-list-item">
+                            <img src="./assets/img/pet-04.png" alt="" class="hero-list-item__thumb">
+                            <div class="hero-list-item__info">
+                                <p class="hero-list-item__title">Pet care</p>
+                                <div class="hero-list-item__skeletion"></div>
+                                <div class="hero-list-item__skeletion" style="--width:39px"></div>
+                            </div>
+                        </section>
                     </div>
                 </div>
                 <section class="hero__content"></section>
