--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     <link rel="stylesheet" href="./assets/css/styles.css">
 </head>
 
-<body>
+<body style="height: 6000px;">
     <!-- Header -->
     <header class="header">
         <div class="container">
@@ -131,6 +131,44 @@
             </div>
         </div>
     </section>
+
+    <main>
+        <!-- About -->
+        <section class="about">
+            <div class="container">
+                <div class="about__inner">
+                    <section class="about__content">
+                        <p class="about__label">// About //</p>
+                        <h2 class="about__heading section-heading">Best Agency For
+                            Your Pet.</h2>
+                        <p class="about__desc">
+                            Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt
+                            ut labore et dolore magna aliqua.
+                        </p>
+                        <div class="about__checklist">
+                            <span class="about__check-item">
+                                Certified Groomer
+                            </span>
+                             <span class="about__check-item">
+                               Animal Lover
+                            </span>
+                             <span class="about__check-item">
+                               14+ Years Experience
+                            </span>
+                             <span class="about__check-item">
+                               Pet Parent Of 3 Dogs
+                            </span>
+                        </div>
+                    </section>
+                    <div class="about__media"></div>
+                    <div class="about__media"></div>
+                    <section class="about__content"></section>
+
+                </div>
+            </div>
+        </section>
+    </main>
+
 
 </body>
 
