Làm phần about #2

--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
         rel="stylesheet" />
 
     <!-- style -->
+     <link rel="stylesheet" href="./assets/css/reset.css">
     <link rel="stylesheet" href="./assets/css/styles.css">
 </head>
 
@@ -81,9 +82,9 @@
                         <section class="hero-list-item">
                             <img src="./assets/img/pet-03.png" alt="" class="hero-list-item__thumb">
                             <div class="hero-list-item__info">
-                                <span class="hero-list-item__title">
+                                <p class="hero-list-item__title">
                                     Pet Health
-                                </span>
+                                </p>
                                 <div class="hero-list-item__skeleton"></div>
                                 <div class="hero-list-item__skeleton" style="--width:39px"></div>
                             </div>
@@ -94,9 +95,9 @@
                         <section class="hero-list-item">
                             <img src="./assets/img/pet-04.png" alt="" class="hero-list-item__thumb">
                             <div class="hero-list-item__info">
-                                <span class="hero-list-item__title">
+                                <p class="hero-list-item__title">
                                     Pet care
-                                </span>
+                                </p>
                                 <div class="hero-list-item__skeleton"></div>
                                 <div class="hero-list-item__skeleton" style="--width:39px"></div>
                             </div>
@@ -149,18 +150,33 @@
                             <span class="about__check-item">
                                 Certified Groomer
                             </span>
-                             <span class="about__check-item">
-                               Animal Lover
+                            <span class="about__check-item">
+                                Animal Lover
                             </span>
-                             <span class="about__check-item">
-                               14+ Years Experience
+                            <span class="about__check-item">
+                                14+ Years Experience
                             </span>
-                             <span class="about__check-item">
-                               Pet Parent Of 3 Dogs
+                            <span class="about__check-item">
+                                Pet Parent Of 3 Dogs
                             </span>
                         </div>
                     </section>
-                    <div class="about__media"></div>
+                    <div class="about__media">
+                        <!-- About Card -->
+                        <div class="about__card">
+                            <b class="about__card-title">20+</b>
+                            <p class="about__card-desc">
+                                Years Experience
+                            </p>
+                            <img src="./assets/img/about-decor01.svg" class="about__card-decor" alt="">
+                        </div>
+
+                        <!-- About image wrapper -->
+                         <figure class="about__img-warp">
+                            <img src="./assets/img/about-01.png" alt="" class="about__img">
+                         </figure>
+                         <img src="./assets/img/about-decor02.svg" alt="" class="about__media-decor">
+                    </div>
                     <div class="about__media"></div>
                     <section class="about__content"></section>
 
