Làm phần about #3

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         rel="stylesheet" />
 
     <!-- style -->
-     <link rel="stylesheet" href="./assets/css/reset.css">
+    <link rel="stylesheet" href="./assets/css/reset.css">
     <link rel="stylesheet" href="./assets/css/styles.css">
 </head>
 
@@ -172,12 +172,27 @@
                         </div>
 
                         <!-- About image wrapper -->
-                         <figure class="about__img-warp">
+                        <figure class="about__img-warp">
                             <img src="./assets/img/about-01.png" alt="" class="about__img">
-                         </figure>
-                         <img src="./assets/img/about-decor02.svg" alt="" class="about__media-decor">
+                        </figure>
+                        <img src="./assets/img/about-decor02.svg" alt="" class="about__media-decor">
                     </div>
-                    <div class="about__media"></div>
+                    <div class="about__media">
+                        <figure class="about__img-warp about__img-warp-bottom">
+                            <img src="./assets/img/about-02.png" alt="" class="about__img about__img-bottom">
+                            <!-- Decorators -->
+                            <div>
+                                <img src="./assets/img/about-decor03.svg" alt="" class="about__decor-img">
+                                <img src="./assets/img/about-decor04.svg" alt="" class="about__decor-img">
+                                <img src="./assets/img/about-decor05.svg" alt="" class="about__decor-img">
+                                <img src="./assets/img/about-decor06.svg" alt="" class="about__decor-img">
+                                <img src="./assets/img/about-decor07.svg" alt="" class="about__decor-img">
+                                <img src="./assets/img/about-decor08.svg" alt="" class="about__decor-img">
+                                <img src="./assets/img/about-decor08.svg" alt="" class="about__decor-img">
+                                <img src="./assets/img/about-decor08.svg" alt="" class="about__decor-img">
+                            </div>
+                        </figure>
+                    </div>
                     <section class="about__content"></section>
 
                 </div>
