--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
                         <p class="about__label">// About //</p>
                         <h2 class="about__heading section-heading">Best Agency For
                             Your Pet.</h2>
-                        <p class="about__desc">
+                        <p class="section-desc">
                             Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt
                             ut labore et dolore magna aliqua.
                         </p>
@@ -193,7 +193,60 @@
                             </div>
                         </figure>
                     </div>
-                    <section class="about__content"></section>
+                    <section class="about__content">
+                        <h2 class="section-heading">
+                            Taking A Vacation? So Is Your Pet.
+                        </h2>
+                        <p class="section-desc about__desc-bottom">
+                            We offer long-term and short-term boarding. Every dog has its own private, spacious room and
+                            daily individual time in our large play yard.
+                        </p>
+                        <div class="tab">
+                            <ul class="tab__list">
+                                <li class="tab__item tab__item--active">
+                                    <img src="./assets/icons/home.png" alt="" class="tab__icon">
+                                    <div class="tab__title">
+                                        Pet Boarding
+                                    </div>
+                                </li>
+                                <li class="tab__item ">
+                                    <img src="./assets/icons/heath.png" alt="" class="tab__icon">
+                                    <div class="tab__title">
+                                        Pet Daycare
+                                    </div>
+                                </li>
+                                <li class="tab__item">
+                                    <img src="./assets/icons/bag.png" alt="" class="tab__icon">
+                                    <div class="tab__title">
+                                        Pet Transport
+                                    </div>
+                                </li>
+                            </ul>
+                            <div class="tab__contents">
+                                <!-- Tab content 1 -->
+                                <div class="tab__content-item tab__content-item--active">
+                                    <p class="tab__content-desc">
+                                        While you're on holiday, here's where your furry friends will spend their time 1.
+                                    </p>
+                                    <a href="#!" class="tab__content-more">View more</a>
+                                </div>
+                                 <!-- Tab content 2 -->
+                                <div class="tab__content-item">
+                                    <p class="tab__content-desc">
+                                        While you're on holiday, here's where your furry friends will spend their time 2.
+                                    </p>
+                                    <a href="#!" class="tab__content-more">View more</a>
+                                </div>
+                                 <!-- Tab content 3 -->
+                                <div class="tab__content-item">
+                                    <p class="tab__content-desc">
+                                        While you're on holiday, here's where your furry friends will spend their time 3.
+                                    </p>
+                                    <a href="#!" class="tab__content-more">View more</a>
+                                </div>
+                            </div>
+                        </div>
+                    </section>
 
                 </div>
             </div>
