--- a/index.html
+++ b/index.html
@@ -226,21 +226,24 @@
                                 <!-- Tab content 1 -->
                                 <div class="tab__content-item tab__content-item--active">
                                     <p class="tab__content-desc">
-                                        While you're on holiday, here's where your furry friends will spend their time 1.
+                                        While you're on holiday, here's where your furry friends will spend their time
+                                        1.
                                     </p>
                                     <a href="#!" class="tab__content-more">View more</a>
                                 </div>
-                                 <!-- Tab content 2 -->
+                                <!-- Tab content 2 -->
                                 <div class="tab__content-item">
                                     <p class="tab__content-desc">
-                                        While you're on holiday, here's where your furry friends will spend their time 2.
+                                        While you're on holiday, here's where your furry friends will spend their time
+                                        2.
                                     </p>
                                     <a href="#!" class="tab__content-more">View more</a>
                                 </div>
-                                 <!-- Tab content 3 -->
+                                <!-- Tab content 3 -->
                                 <div class="tab__content-item">
                                     <p class="tab__content-desc">
-                                        While you're on holiday, here's where your furry friends will spend their time 3.
+                                        While you're on holiday, here's where your furry friends will spend their time
+                                        3.
                                     </p>
                                     <a href="#!" class="tab__content-more">View more</a>
                                 </div>
@@ -248,6 +251,85 @@
                         </div>
                     </section>
 
+                </div>
+            </div>
+        </section>
+        <!-- Service -->
+        <section class="service">
+            <div class="container">
+                <section class="service__top">
+                    <p class="service__desc">What we do for you?</p>
+                    <h2 class="section-heading">Our Services</h2>
+                </section>
+
+                <div class="service__body">
+                    <div class="service__column">
+                        <!-- Service item 1 -->
+                        <article class="service-item">
+                            <h3 class="service-item__heading">Puppy Sitting</h3>
+                            <p class="service-item__desc">
+                                Helping your new pup to be a good boy or girl isn’t always easy, but we’re here to help.
+                            </p>
+                            <a href="#!" class="service-item__more">
+                                Read More
+                            </a>
+                        </article>
+                        <!-- Service item 2 -->
+                        <article class="service-item">
+                            <h3 class="service-item__heading">Dog Walking</h3>
+                            <p class="service-item__desc">
+                                Choose from a 30, 45, or 60-minute visit to give your pet their daily dose of
+                                fun-filled. </p>
+                            <a href="#!" class="service-item__more">
+                                Read More
+                            </a>
+                        </article>
+                        <!-- Service item 3 -->
+                        <article class="service-item">
+                            <h3 class="service-item__heading">Pet Sitting</h3>
+                            <p class="service-item__desc">
+                                While you’re away we can make sure your pet has all the food, water, exercise, and, of
+                                course. </p>
+                            <a href="#!" class="service-item__more">
+                                Read More
+                            </a>
+                        </article>
+                    </div>
+                    <div class="service__column">
+
+                    </div>
+                    <div class="service__column">
+                        <!-- Service item 4 -->
+                        <article class="service-item">
+                            <h3 class="service-item__heading">Overnight Care</h3>
+                            <p class="service-item__desc">
+                                If you’re away for the night, we can stay the night or stop by in the evening and
+                                morning. </p>
+                            <a href="#!" class="service-item__more">
+                                Read More
+                            </a>
+                        </article>
+                        <!-- Service item 5 -->
+                        <article class="service-item">
+                            <h3 class="service-item__heading">Pet Taxi</h3>
+                            <p class="service-item__desc">
+                                If you’re away for the night, we can stay the night or stop by in the evening and
+                                morning. </p>
+                            <a href="#!" class="service-item__more">
+                                Read More
+                            </a>
+                        </article>
+                        <!-- Service item 6 -->
+                        <article class="service-item">
+                            <h3 class="service-item__heading">Pet Medical Admin</h3>
+                            <p class="service-item__desc">
+                                Our team of experienced professionals can help with everything from pills to injections.
+                            </p>
+                            <a href="#!" class="service-item__more">
+                                Read More
+                            </a>
+                        </article>
+                    </div>
                 </div>
             </div>
         </section>
