--- a/index.html
+++ b/index.html
@@ -384,6 +384,36 @@
                 </div>
             </div>
         </section>
+
+        <!-- Pricing -->
+        <div class="pricing">
+            <div class="container">
+                <h2 class="section-heading pricing__heading">
+                    The Best Choice
+                </h2>
+                <p class="section-desc pricing__desc">
+                    We offer long-term and short-term boarding. Every dog has its own private, spacious room and daily
+                    individual time in our large play yard.
+                </p>
+                <div class="pricing__switch-wrap">
+                    <div class="pricing__switch-inner">
+                        <div class="pricing__switch">
+                            <input type="checkbox" name="" id="pricing-switch" class="pricing__switch-input" hidden checked>
+                            <label for="pricing-switch" class="pricing__switch-label">
+                                <span class="pricing__switch-value">
+                                    Monthly
+                                </span>
+                                <span class="pricing__switch-value">
+                                    Yearly
+                                </span>
+                            </label>
+                        </div>
+                        <!-- Sale Off -->
+                        <img src="./assets/img/pricing-sell-of.svg" alt="" class="pricing__sale-off">
+                    </div>
+                </div>
+            </div>
+        </div>
     </main>
 
 
