--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     <link rel="stylesheet" href="./assets/css/styles.css">
 </head>
 
-<body style="height: 6000px;">
+<body style="height: 10000px;">
     <!-- Header -->
     <header class="header">
         <div class="container">
@@ -509,7 +509,7 @@
                                     </p>
                                 </section>
                             </article>
-                               <article class="review-item">
+                            <article class="review-item">
                                 <!-- Review item 1 -->
                                 <figure class="review-item__media">
                                     <img src="./assets/img/review-01.png" alt="" class="review-item__img">
@@ -527,7 +527,7 @@
                                     </p>
                                 </section>
                             </article>
-                               <article class="review-item">
+                            <article class="review-item">
                                 <!-- Review item 1 -->
                                 <figure class="review-item__media">
                                     <img src="./assets/img/review-01.png" alt="" class="review-item__img">
@@ -545,7 +545,7 @@
                                     </p>
                                 </section>
                             </article>
-                               <article class="review-item">
+                            <article class="review-item">
                                 <!-- Review item 1 -->
                                 <figure class="review-item__media">
                                     <img src="./assets/img/review-01.png" alt="" class="review-item__img">
@@ -577,16 +577,30 @@
                     <!-- Review next -->
                     <button class="review__control">
                         <svg width="20" height="20" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
-                            <path d="M3.125 9.99854H16.875" stroke="currentColor" stroke-width="1.5" stroke-linecap="round"
-                                stroke-linejoin="round" />
-                            <path d="M11.25 4.37354L16.875 9.99854L11.25 15.6235" stroke="currentColor" stroke-width="1.5"
+                            <path d="M3.125 9.99854H16.875" stroke="currentColor" stroke-width="1.5"
                                 stroke-linecap="round" stroke-linejoin="round" />
+                            <path d="M11.25 4.37354L16.875 9.99854L11.25 15.6235" stroke="currentColor"
+                                stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" />
                         </svg>
 
                     </button>
                 </div>
             </div>
         </section>
+
+        <!-- Blog -->
+        <section class="blog">
+            <div class="container">
+                <div class="blog__top">
+                    <h2 class="section-heading">Out Blog</h2>
+                    <div class="blog__info">
+                        <p class="blog__desc section-desc">Stay up to date with the latest tech trands and news in the pets.</p>
+                        <a href="#!" class="btn blog_cta">View All Blog</a>
+                    </div>
+                </div>
+            </div>
+        </section>
+
     </main>
 
 
