--- a/index.html
+++ b/index.html
@@ -675,16 +675,16 @@
 
     <!-- Footer -->
 
-    <footet class="footer">
+    <footer class="footer">
         <div class="container">
             <div class="footer__inner">
                 <div class="footer__left">
                     <!-- logo -->
                     <img src="./assets/img/Logo.svg" alt="">
-                    <!-- Search form -->
-                    <form action="" class="search-form">
-                        <input type="email" placeholder="Enter your email" class="search-form__input">
-                        <button type="submit" class="search-form__submit">
+                    <!-- Subcribe form -->
+                    <form action="" class="subcribe-form">
+                        <input type="email" placeholder="Enter your email" class="subcribe-form__input">
+                        <button type="submit" class="subcribe-form__submit">
                             <svg width="18" height="18" viewBox="0 0 18 18" fill="none"
                                 xmlns="http://www.w3.org/2000/svg">
                                 <path d="M2.8125 9.00195H15.1875" stroke="currentColor" stroke-width="1.5"
@@ -733,13 +733,86 @@
                     </div>
                 </div>
                 <div class="footer__right">
+                    <div class="footer__row">
+                        <!-- Footer column 1    -->
+                        <section class="footer__column">
+                            <h3 class="footer__heading">Explore</h3>
+                            <ul class="footer__list">
+                                <li><a href="#!" class="footer_link">About Us</a></li>
+                                <li><a href="#!" class="footer_link">Services</a></li>
+                                <li><a href="#!" class="footer_link">Our Team</a></li>
+                                <li><a href="#!" class="footer_link">Adopt Pet</a></li>
+                            </ul>
+                        </section>
+                        <!-- Footer column 2  -->
 
+                        <section class="footer__column">
+                            <h3 class="footer__heading">Useful links</h3>
+                            <ul class="footer__list">
+                                <li>
+                                    <a href="#!" class="footer_link">
+                                        FAQs
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="#!" class="footer_link">
+
+                                        Shop
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="#!" class="footer_link">
+
+                                        Privacy Policy
+
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="#!" class="footer_link">
+                                        Adopt Pet
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="#!" class="footer_link">
+
+                                        Site Map
+                                    </a>
+                                </li>
+
+                            </ul>
+                        </section>
+                        <!-- Footer column 3 -->
+
+                        <section class="footer__column">
+                            <h3 class="footer__heading">Contact Info</h3>
+                            <ul class="footer__list">
+                                <li><a href="#!" class="footer_link">abc@gmail.com</a></li>
+                                <li><a href="#!" class="footer_link">0 (800)-000-00-00</a></li>
+                                <li><a href="#!" class="footer_link">New York, NY, Rocawy 7</a></li>
+                            </ul>
+                        </section>
+                        <!-- Footer column 4  -->
+                        <section class="footer__column">
+                            <h3 class="footer__heading">Opening Time</h3>
+                            <ul class="footer__list">
+                                <li><a href="#!" class="footer_link">Mon – Fri : 08.00 am – 20.00 pm</a></li>
+                                <li><a href="#!" class="footer_link">Saturday : 09.00 am – 20.00 pm</a></li>
+                                <li><a href="#!" class="footer_link">Sunday: We are Closed</a></li>
+                            </ul>
+                        </section>
+                    </div>
+                    <p class="footer__copyright">Copyright & Design By Uihut</p>
                 </div>
             </div>
         </div>
-    </footet>
-
+    </footer>
 
 </body>
+
+
+
+
+
+
 
 </html>
